objects/SC_AssociatedContractExtension__c.object
<CustomObject>
    <description>Custom object to associated with Associated Contract to extend its details.</description>
    <fields>
        <fullName>RSC_ABIPercentageIncrease__c</fullName>
        <description>Annual Benefit Increase Percentage.</description>
        <label>ABI % Increase</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_ACIPercentageIncrease__c</fullName>
        <description>Annual contribution increase percentage.</description>
        <label>ACI % Increase</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_AdviserBranchCode__c</fullName>
        <description>This field is used to capture the branch code of an adviser.</description>
        <label>Branch Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_AdviserBusinessTelephoneNumber__c</fullName>
        <description>Used to capture the business telephone number of the adviser.</description>
        <label>Business Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RSC_AdviserCellphoneNumber__c</fullName>
        <description>This field is used to capture the cellphone number of adviser.</description>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RSC_AdviserEmail__c</fullName>
        <description>Field to capture the adviser email.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RSC_AdviserHomeTelephoneNumber__c</fullName>
        <description>Field to capture the home telephone number of the adviser.</description>
        <label>Home Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RSC_AdviserIdentificationNumber__c</fullName>
        <description>Field to capture the identification number of the adviser.</description>
        <label>Identification Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_AdviserIntermediaryChannel__c</fullName>
        <description>Field used to capture the adviser intermediary channel</description>
        <label>Channel</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_AdviserName__c</fullName>
        <description>Field used to capture the adviser name.</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_AdviserReason__c</fullName>
        <description>Field used to capture the adviser reason</description>
        <label>Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_AdviserRegionCode__c</fullName>
        <description>This is used to capture the region code of adviser.</description>
        <label>Region Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_AdviserRegionName__c</fullName>
        <description>This field is used to capture the region name of adviser.</description>
        <label>Region Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_AdviserStatus__c</fullName>
        <description>This field is used to capture the status of adviser.</description>
        <label>Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_AdviserSurname__c</fullName>
        <description>Field to capture the surname of the adviser.</description>
        <label>Adviser Surname</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_BankAccountNumber__c</fullName>
        <description>&quot;The bank account number from which premium payments are debited i.e. account number of the payee on the contract. This field is compass specific and so for lifestyle blank value will come.
Related to 321712&quot;</description>
        <label>Bank Account Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_BankName__c</fullName>
        <description>&quot;The bank at which the bank account resides for premium payments i.e. bank name of the payee on the contract. This field is compass specific and so for lifestyle blank value will come.
Related to 321712&quot;</description>
        <label>Bank Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_BonusPaymentAmount__c</fullName>
        <description>This field stores the Bonus Payment Amount</description>
        <label>Bonus  Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RSC_BonusPaymentDate__c</fullName>
        <description>This field stores the Bonus Payment Date</description>
        <label>Bonus Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RSC_CampaignPriority__c</fullName>
        <description>This field will hold the Campaign Priority against individual policy.</description>
        <label>Campaign Priority</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_Campaign__c</fullName>
        <description>This field will indicate the campaign type.</description>
        <label>Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_CessionType__c</fullName>
        <description>Contract Cession Type
Related to 321712</description>
        <label>Cession Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_Cession__c</fullName>
        <description>This field will hold the cessionary information related to a policy.</description>
        <label>Cessionary</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_Channel__c</fullName>
        <description>This field will indicate the channel of the campaign.</description>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_ClientIndicator__c</fullName>
        <description>This field is used to indicate the client type.</description>
        <label>Client Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_ConsultantCode__c</fullName>
        <description>This field will indicate the Consultant Code of the Adviser</description>
        <label>Consultant Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_ContributionAmount__c</fullName>
        <description>Contribution amount value</description>
        <label>Contribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RSC_ContributionFromDate__c</fullName>
        <description>Premium contribution from date</description>
        <label>Contribution From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RSC_CurrentABIPercentage__c</fullName>
        <description>Current Annual Benefit Increase allocated to this contract.</description>
        <label>Current ABI%</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_DateOfCommencement__c</fullName>
        <description>Contract Commencement Date
Related to 321712</description>
        <label>Date Of Commencement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RSC_DebitDay__c</fullName>
        <description>&quot;On which date the Policy is debited for Premium.
Related to 321712&quot;</description>
        <label>Debit Day</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_DebitOrderRejectedReason__c</fullName>
        <description>This field is used to capture the debit order rejection reason.</description>
        <label>Rejection Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_ExpectedLapseDateForOptionFour__c</fullName>
        <description>GRD ad-hoc field to capture expected lapse date for option four.</description>
        <label>Expected Lapse Date</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_ExpectedLapseDate__c</fullName>
        <description>The date at which contract is expected to lapse.</description>
        <label>Expected Lapse Date</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_FutureExpectedRequiredPremium__c</fullName>
        <description>Premium this will be effective after contract benefit updated.</description>
        <label>Future Expected Required Premium</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_NewABIOptionThree__c</fullName>
        <description>ABI Option Amount</description>
        <label>New ABI Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RSC_NewGRDForOptionFive__c</fullName>
        <description>GRD ad-hoc field to capture new GRD for option 5.</description>
        <label>New GRD</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_NewGRDForOptionOne__c</fullName>
        <description>GRD ad-hoc field to capture new GRD for option 1</description>
        <label>New GRD</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_NewGRDForOptionThree__c</fullName>
        <description>GRD ad-hoc field to capture new GRD for option 3.</description>
        <label>New GRD</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_NewGRDForOptionTwo__c</fullName>
        <description>GRD ad-hoc field to capture new GRD for option 2.</description>
        <label>New GRD</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_NewPremiumForOptionFive__c</fullName>
        <description>GRD ad-hoc field to capture new premium for option 5.</description>
        <label>New Premium</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_NewPremiumForOptionOne__c</fullName>
        <description>GRD ad-hoc field to capture new premium for option 1.</description>
        <label>New Premium</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_NewPremiumForOptionTwo__c</fullName>
        <description>GRD ad-hoc field to capture new premium for option 2.</description>
        <label>New Premium</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_NewSumAssuredForOptionThree__c</fullName>
        <description>GRD ad-hoc field to capture new sum assured for option three.</description>
        <label>New Sum Assured</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_NewSumAssuredForOptionTwo_c__c</fullName>
        <description>Ad-hoc field to capture new sum assured for option two.</description>
        <label>New Sum Assured</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_NextReview25Capped__c</fullName>
        <description>Next date at which policy need to be reviewed.</description>
        <label>Next Review 25% Capped</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_Option2SumAssuredReduction__c</fullName>
        <description>Percentage at which the sum assured has been reduced after the client has made a selection.</description>
        <label>Option 2 Sum Assured Reduction %</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_OptionFiveDescription__c</fullName>
        <description>GRD ad-hoc field to capture option 5 description.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_OptionFourDescription__c</fullName>
        <description>GRD ad-hoc field to capture option 4 description.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_OptionOneDescription__c</fullName>
        <description>GRD ad-hoc field to capture option 1 description.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_OptionThreeDescription__c</fullName>
        <description>GRD ad-hoc field to capture option 3 description.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_OptionTwoDescription__c</fullName>
        <description>GRD ad-hoc field to capture option 2 description.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_OutstandingAmount__c</fullName>
        <description>The amount still outstanding on the policy to make policy paid-to-date.</description>
        <label>Outstanding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RSC_OutstandingPremiumCount__c</fullName>
        <description>The number of outstanding premiums</description>
        <label>Outstanding Premium Count</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_PaymentFrequency__c</fullName>
        <description>&quot;Frequency in which a person will pay there premiums i.e monthly.
Related to 321712&quot;</description>
        <label>Payment Frequency</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_PaymentMethod__c</fullName>
        <description>This field is used to capture the payment method for a policy.</description>
        <label>Payment Method</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_PayorID__c</fullName>
        <description>Contract Payor ID
Related to 321712</description>
        <label>Payor ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_PercentageIndicator__c</fullName>
        <description>Percentage Indicator.</description>
        <label>% Indicator</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_PolicyNumber__c</fullName>
        <description>This field is used to capture the policy number.</description>
        <label>Policy Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_PolicyPaymentMode__c</fullName>
        <description>Mode of payment defined for a contract premium.</description>
        <label>Policy Payment Mode</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_PolicyStatus__c</fullName>
        <description>This field is used to capture the status of a policy.</description>
        <label>Policy Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_PolicyType__c</fullName>
        <description>This field is used to capture the type of policy.</description>
        <label>Policy Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_PostACIPremium__c</fullName>
        <description>New premium to be paid after Annual Contribution Increase.</description>
        <label>Post ACI Premium</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_PremiumAmount__c</fullName>
        <description>Welcome Call/Level Premium ad-hoc to store the Welcome Call and Level Premium premium amount</description>
        <label>Premium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RSC_PremiumIncreaseDate__c</fullName>
        <description>The date at which the premium is reviewed and increased.</description>
        <label>Premium Increase Date</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_Rank__c</fullName>
        <description>This field is used to indicate the rank of the campaign.</description>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSC_RequiredPremium__c</fullName>
        <description>Current required premium for a contract based on the option selected.</description>
        <label>Required Premium</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_ReviewDate__c</fullName>
        <description>Field to capture a Review Date</description>
        <label>Review Date</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_ReviewedPremium__c</fullName>
        <description>Premium after the annual review has concluded.</description>
        <label>Reviewed Premium</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_SchemeCode__c</fullName>
        <description>Scheme Code.</description>
        <label>Scheme Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_BrokerConsultantEmail__c</fullName>
        <description>This field will indicate any additional email addresses that should also be used when sending communications</description>
        <label>Broker Consultant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SC_CanConsultantBookMed__c</fullName>
        <description>This field will indicate wether the Consultant can book medicals by themselves</description>
        <label>Can Consultant Book Med</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_CaseExtension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is lookup of Case Extension</description>
        <label>Case Extension</label>
        <referenceTo>SC_CaseExtension__c</referenceTo>
        <relationshipLabel>Associated Contract Extensions</relationshipLabel>
        <relationshipName>Associated_Contract_Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SC_CaseRecordType__c</fullName>
        <description>This is used to store the record type of the case linked to the related Associated Contract record.</description>
        <label>Case Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_ConsultantInitials__c</fullName>
        <description>This field will indicate the Consultant Initials</description>
        <label>Consultant Initials</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_ConsultantPriority__c</fullName>
        <description>This field will indicate if the Adviser is a priority Adviser</description>
        <label>Consultant Priority</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_ConsultantTelephoneNumber__c</fullName>
        <description>This field will indicate the consultant telephone number</description>
        <label>Consultant Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SC_ConsultantType__c</fullName>
        <description>This field will indicate the Type of Consultant, Adviser, Broker etc.</description>
        <label>Consultant Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_ContractNumber__c</fullName>
        <description>This field will show the Associated Contract Number that we have received from the Mulesoft API.</description>
        <label>Contract Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_Outcome__c</fullName>
        <description>This field holds Call Outcomes Per Policy</description>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Affordability​</fullName>
                    <isActive>false</isActive>
                    <label>Affordability​</label>
                </value>
                <value>
                    <fullName>Affordability</fullName>
                </value>
                <value>
                    <fullName>Age rated premium</fullName>
                    <isActive>false</isActive>
                    <label>Age rated premium</label>
                </value>
                <value>
                    <fullName>Age Rated Premium Increase</fullName>
                </value>
                <value>
                    <fullName>Arrangement made with Financial Adviser</fullName>
                </value>
                <value>
                    <fullName>Arrangement made with Servicing Team</fullName>
                </value>
                <value>
                    <fullName>Benefits Reduction - Premium Guarantee 10 years</fullName>
                </value>
                <value>
                    <fullName>Cancellation​</fullName>
                    <isActive>false</isActive>
                    <label>Cancellation​</label>
                </value>
                <value>
                    <fullName>Client already contacted for another campaign</fullName>
                </value>
                <value>
                    <fullName>Client already contacted successfully</fullName>
                </value>
                <value>
                    <fullName>Client could not be reached</fullName>
                </value>
                <value>
                    <fullName>Client deceased</fullName>
                </value>
                <value>
                    <fullName>Client not interested</fullName>
                </value>
                <value>
                    <fullName>Client unaware of policy</fullName>
                </value>
                <value>
                    <fullName>Client wants to cancel policy</fullName>
                </value>
                <value>
                    <fullName>Client wants to speak to Financial Adviser</fullName>
                </value>
                <value>
                    <fullName>Client wants to surrender policy</fullName>
                </value>
                <value>
                    <fullName>Comprehensive Review</fullName>
                </value>
                <value>
                    <fullName>Converted to Debit Order​</fullName>
                    <isActive>false</isActive>
                    <label>Converted to Debit Order​</label>
                </value>
                <value>
                    <fullName>Converted to Debit Order</fullName>
                </value>
                <value>
                    <fullName>Customer Wants to Speak with Broker​</fullName>
                    <isActive>false</isActive>
                    <label>Customer Wants to Speak with Broker​</label>
                </value>
                <value>
                    <fullName>Debit Order Form sent</fullName>
                </value>
                <value>
                    <fullName>Default Premium Increase</fullName>
                </value>
                <value>
                    <fullName>Double Debit​</fullName>
                    <isActive>false</isActive>
                    <label>Double Debit​</label>
                </value>
                <value>
                    <fullName>Double Debit</fullName>
                </value>
                <value>
                    <fullName>Increase Premium (Premium guarantee extended by 13 years)</fullName>
                </value>
                <value>
                    <fullName>Increase premium (Universal Lifestyle only)</fullName>
                    <isActive>false</isActive>
                    <label>Increase premium (Universal Lifestyle only)</label>
                </value>
                <value>
                    <fullName>Internet Payment​</fullName>
                    <isActive>false</isActive>
                    <label>Internet Payment​</label>
                </value>
                <value>
                    <fullName>Internet Payment</fullName>
                </value>
                <value>
                    <fullName>Leave Policy As Is</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Associated Contract Extension</label>
    <nameField>
        <label>Associated Contract Extension Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Contract Extensions</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>Default Record Type</description>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>RSC_Addlib</fullName>
        <active>true</active>
        <description>Represents Lifestyle Protector bonus &amp; compass bonus payment.</description>
        <label>Addlib</label>
    </recordTypes>
    <recordTypes>
        <fullName>RSC_AdhocProactiveInitiatives</fullName>
        <active>true</active>
        <description>Represents records related to Adhoc Proactive Initiatives.</description>
        <label>Adhoc Proactive Initiatives</label>
    </recordTypes>
    <recordTypes>
        <fullName>RSC_CashToDebit</fullName>
        <active>true</active>
        <description>Represents policies with premiums that are paid in Cash will be included in the initiative for Cash to Debit order initiative.</description>
        <label>Cash To Debit</label>
    </recordTypes>
    <recordTypes>
        <fullName>RSC_ESeries</fullName>
        <active>true</active>
        <description>Represents Lifestyle Protector bonus &amp; compass bonus payment.</description>
        <label>E-series</label>
    </recordTypes>
    <recordTypes>
        <fullName>RSC_GuaranteeReviewDate</fullName>
        <active>true</active>
        <description>Represents Legacy universal life product with whole life risk cover.</description>
        <label>Guarantee Review Date</label>
    </recordTypes>
    <recordTypes>
        <fullName>RSC_LevelPremiumCall</fullName>
        <active>true</active>
        <description>Represents Lifestyle Protector Level Premium policies.</description>
        <label>Level Premium Call</label>
    </recordTypes>
    <recordTypes>
        <fullName>RSC_OngoingPortfolioReview</fullName>
        <active>true</active>
        <description>Represents portfolio’s review and alignment.</description>
        <label>Ongoing Portfolio Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>RSC_ProactiveRetentions</fullName>
        <active>true</active>
        <description>Represents proactive identification of customers with a high propensity of lapse.</description>
        <label>Proactive Retentions</label>
    </recordTypes>
    <recordTypes>
        <fullName>RSC_UnpaidDebitOrders</fullName>
        <active>true</active>
        <description>Represents Unpaid Debit Order policies i.e Policies with missed premiums.</description>
        <label>Unpaid Debit Orders</label>
    </recordTypes>
    <recordTypes>
        <fullName>RSC_WelcomeCall</fullName>
        <active>true</active>
        <description>Represents welcome call for new policies.</description>
        <label>Welcome Call</label>
    </recordTypes>
    <recordTypes>
        <fullName>SC_MedicalAppointment</fullName>
        <active>true</active>
        <description>Represents Medical Appointment for clients.</description>
        <label>Medical Appointment</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>